# MDBot2

./: .clang-tidy  .gitignore  CMakeLists.txt  MDBot2.code-workspace  README.MD  TODO.md  build.bat  build_tests.bat  configure.bat  run_tests.bat
src/client/: CMakeLists.txt  DllMain.cpp  README.md
src/client/Hooks/: CharacterHook.cpp  CharacterHook.h  CtMEnablerHook.cpp  CtMEnablerHook.h  GameLoopHook.cpp  GameLoopHook.h  VisibleObjectsHook.cpp  VisibleObjectsHook.h
src/client/MainLoop/: MainLoopHook.cpp  MainLoopHook.h
src/client/Managers/: GameObjectManager.cpp  GameObjectManager.h
src/client/Managers/CharacterManager/: CharacterManager.cpp  CharacterManager.h
src/client/Managers/CombatManager/: CombatManager.cpp  CombatManager.h
src/client/Managers/InteractionManager/: InteractionManager.cpp  InteractionManager.h
src/client/Managers/MovementManager/: MovementManager.cpp  MovementManager.h
src/client/core/Hooking/: InlineHook.cpp  InlineHook.h  Registers.h
src/client/core/Memory/: SharedMemoryConnector.cpp  SharedMemoryConnector.h
src/core/: CMakeLists.txt
src/core/BehaviorTree/: BTContext.h  BTNode.h  ConditionNode.h  DecoratorNode.h  InverterNode.cpp  InverterNode.h  README.md  RunWhileConditionDecorator.cpp  RunWhileConditionDecorator.h  SelectorNode.cpp  SelectorNode.h  SequenceNode.cpp  SequenceNode.h  WhileSuccessDecorator.cpp  WhileSuccessDecorator.h
src/core/BlacklistManager/: BlacklistManager.cpp  BlacklistManager.h
src/core/Bot/: Bot.cpp  Bot.h  README.md
src/core/Bot/BehaviorTree/: BEHAVIOR_TREE_PALETTE.md  BehaviorTreeBuilder.cpp  BehaviorTreeBuilder.h  CombatBuilder.cpp  CombatBuilder.h  ModuleBuilder.cpp  ModuleBuilder.h  SystemBuilder.cpp
src/core/Bot/BehaviorTree/Combat/: CombatBuilder.cpp  README.md
src/core/Bot/BehaviorTree/Modules/: ModuleBuilder.cpp
src/core/Bot/BehaviorTree/Profiles/: GatheringProfile.h  GrindingProfile.h
src/core/Bot/BehaviorTree/System/: SystemBuilder.cpp  SystemBuilder.h
src/core/Bot/Character/: Character.cpp  Character.h  CharacterHook.cpp  CharacterHook.h
src/core/Bot/CombatManager/: CombatManager.cpp  CombatManager.h
src/core/Bot/GameObjectManager/: GameObjectManager.cpp  GameObjectManager.h  hooks.txt
src/core/Bot/Hooks/: GetComputerNameHook.cpp  GetComputerNameHook.h
src/core/Bot/InteractionManager/: InteractionManager.cpp  InteractionManager.h
src/core/Bot/Modules/: MobGrindModule.cpp  OreGrindModule.cpp  OreGrindModule.h  PartyModule.cpp  PartyModule.h
src/core/Bot/Movement/: MovementManager.cpp  MovementManager.h
src/core/Bot/Profiles/: GatheringProfile.h
src/core/Bot/Settings/: BotSettings.h  GatheringSettings.h  GrindingSettings.h
src/core/Database/: ResourceDatabase.cpp  ResourceDatabase.h
src/core/HookManager/: HookManager.cpp  HookManager.h
src/core/HookManager/Hook/: Hook.h
src/core/InjectionManager/: InjectionManager.cpp
src/core/Logging/: Logging.cpp  Logging.h
src/core/MemoryManager/: MemoryManager.cpp  MemoryManager.h
src/core/Navigation/: NavMeshManager.cpp  NavMeshManager.h  PathfindingService.cpp  PathfindingService.h
src/core/PartyManager/: PartyContext.h  PartyManager.cpp  PartyManager.h
src/core/PartyManager/Settings/: PartySettings.h
src/core/ProcessManager/: ProcessManager.cpp  ProcessManager.h
src/core/ProfileManager/: ProfileManager.cpp  ProfileManager.h
src/core/SharedMemoryManager/: SharedMemoryManager.cpp  SharedMemoryManager.h
src/shared/: CMakeLists.txt
src/shared/Data/: SharedData.h
src/shared/Data/enums/: PowerType.h
src/shared/Structures/: Cooldowns.h  GameObject.h  Offsets.h  Player.h  Unit.h  WorldObject.h
src/shared/Structures/Enums/: GameObjectType.h
src/shared/Utils/: Vector.h
tools/ExperimentalNavigationC++/: CMakeLists.txt  TODO.md
tools/ExperimentalNavigationC++/src/: main.cpp
tools/ExperimentalNavigationC++/src/gui/: MainWindow.cpp  MainWindow.h  VtkWidget.cpp  VtkWidget.h
tools/ExperimentalNavigationC++/src/integration/: MemoryManager.cpp  MemoryManager.h  WoWController.cpp  WoWController.h
tools/ExperimentalNavigationC++/src/shared/: Logger.cpp  Logger.h
tools/MDHack/: .clang-format  .gitignore  CMakeLists.txt  TODO.md
tools/MDHack/.github/: copilot-instructions.md
tools/MDHack/src/: main.cpp
tools/MDHack/src/core/: appcontext.cpp  appcontext.h
tools/MDHack/src/gui/: mainwindow.cpp  mainwindow.h  processlistdialog.cpp  processlistdialog.h
tools/MapEditor/: CMakeLists.txt  README.md  TODO.md  resources.qrc
tools/MapEditor/src/: main.cpp
tools/MapEditor/src/gui/: MainWindow.cpp  MainWindow.h
tools/MapEditor/tests/: stormlib_test.cpp
tools/NavMeshTool/: CMakeLists.txt  README.MD  TODO.md
tools/NavMeshTool/.cursor/rules/: behaviour.mdc
tools/NavMeshTool/fast_test/terrain_working/: testik vertices.py
tools/NavMeshTool/src/: main.cpp
tools/NavMeshTool/src/gui/: MainWindow.cpp  MainWindow.h
tools/NavMeshTool/tests/: main.cpp  stormlib_test.cpp  stormlib_test_unicode_qt.cpp  stormlib_work.txt
tools/NavMeshTool/tests/ADT/: TestADTParser.cpp
tools/NavMeshTool/tests/M2/: TestM2Parser.cpp
tools/NavMeshTool/tests/MpqManager/: TestMpqManager.cpp
tools/NavMeshTool/tests/NavMeshGenerator/: processAdtTerrain.cpp  processAdtTerrain.h
tools/NavMeshTool/tests/StormLib/: TestStormLibIntegration.cpp
tools/NavMeshTool/tests/WDT/: TestWdtParser.cpp
tools/NavMeshTool/tests/WMO/: TestWMOParser.cpp
tools/NavService/: .clang-tidy  BUILD_INSTRUCTIONS.md  CMakeLists.txt  TODO.md
tools/NavService/.cursor/rules/: map3dview.mdc  reverse.mdc
tools/NavService/src/: NavServiceApp.cpp  NavServiceApp.h  main.cpp
tools/NavService/src/Communication/: MessageHandler.cpp  MessageHandler.h
tools/NavService/src/NamedPipeServer/: NamedPipeServer.cpp  NamedPipeServer.h
tools/NavService/src/Navigation/: NavMeshManager.cpp  NavMeshManager.h
tools/NavService/src/Pathfinder/: Pathfinder.cpp  Pathfinder.h
tools/NavService/src/Utils/: CoordinateConverter.cpp  CoordinateConverter.h  Logger.cpp  Logger.h  Vector.h
tools/NavService/tests/: test_client.cpp  test_navmesh_manager.cpp
(+922 files in other folders)
